--- a/cookies.html
+++ b/cookies.html
@@ -13,7 +13,10 @@
 
   <!-- Javascript -->
   <script type="text/javascript" src="cookies.js"></script>
-
+  
+  <!-- CSS -->
+  <link rel="stylesheet" href="cookies.css">
+  
 </head>
 
 <body>
@@ -24,7 +27,7 @@
       </div>
       <div class="col-md-4">
         <button class='btn danger'>
-          <img src="cookie.png">
+          <img class='cookie-pic' src="cookie.png">
         </button>
       </div>
       <div class="col-md-4">
