--- a/cookies.html
+++ b/cookies.html
@@ -32,7 +32,7 @@
       </div>
       <div class="col-md-4">
         <h2>Click Count:</h2>
-        <h4>0</h4>
+        <h4 id='count'>0</h4>
       </div>
       <div class="col-md-2">
       </div>
