another commit while fn is still broken

--- a/cookies.html
+++ b/cookies.html
@@ -26,7 +26,7 @@
       <div class="col-md-2">
       </div>
       <div class="col-md-4">
-        <button class='btn danger'>
+        <button class='btn'>
           <img class='cookie-pic' src="cookie.png">
         </button>
       </div>
