--- a/cookies.html
+++ b/cookies.html
@@ -21,7 +21,7 @@
 
 <body>
 
-  <div class="container">
+<!--   <div class="container">
     <div class="row">
       <div class="col-md-2">
       </div>
@@ -36,6 +36,6 @@
       </div>
       <div class="col-md-2">
       </div>
-  </div>
+  </div> -->
 </body>
 </html>
