--- a/cookies.html
+++ b/cookies.html
@@ -20,7 +20,8 @@
 </head>
 
 <body>
-<!--   <div class="container">
+
+  <div class="container">
     <div class="row">
       <div class="col-md-2">
       </div>
@@ -35,6 +36,6 @@
       </div>
       <div class="col-md-2">
       </div>
-  </div> -->
+  </div>
 </body>
 </html>
